# Api360-backend

./: .dockerignore  .gitignore  deploy.sh  docker-compose.yml  main.py  requirements.txt
.claude/: settings.json  settings.local.json
.claude/agents/: backend-paas-architect.md
app/core/: config.py  db_config.py  db_session.py  supabase_config.py
app/endpoints/: auth.py  drivers.py  locations.py  trips.py
app/microservices/auth/: Dockerfile  main.py  requirements.txt
app/microservices/auth/config/: settings.py
app/microservices/auth/routes/: auth.py  health.py  users.py
app/microservices/auth/services/: smtp.py  utils.py
app/microservices/trips/: trips.py
app/microservices/trips/routes/: trips.py
app/middlewares/: middlewares.py
app/models/: auth_model.py  driver.py  location.py  organization.py  trip.py  user.py
app/schemas/: __init__.py  modelos.txt  schemas.py
app/services/: auth.py  helpers.py  smtp.py  test.py  trip_importer.py  utils.py
gateway/: Dockerfile  main.py  requirements.txt
gateway/config/: settings.py
gateway/middlewares/: middlewares.py
gateway/routes/: auth.py  health.py
gateway/utils/: utils.py
k8s/: auth-service.yaml  configmap.yaml  gateway.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml
shared/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
shared/config/: __init__.py  settings.py
shared/database/: db_settings.py
shared/models/: __init__.py  driver.py  trip.py  user_model.py
shared/schemas/: schemas.py
shared/validators/: __init__.py  validators.py
(+2 files in other folders)
